[gd_scene load_steps=4 format=3 uid="uid://csobuv8hrtemj"]

[ext_resource type="Script" path="res://hud_ingame/Hud.gd" id="1_5y2mc"]
[ext_resource type="Texture2D" uid="uid://bu5d4xbjt4pq7" path="res://sprites/Jaugeindu.png" id="2_x0pn0"]
[ext_resource type="Texture2D" uid="uid://cimfiyhdnw0p4" path="res://sprites/Jauge_bio.png" id="3_y6vgk"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_5y2mc")

[node name="display_timer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Timer:"

[node name="game_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="second_timer" type="Timer" parent="."]

[node name="jin_bar" type="TextureProgressBar" parent="."]
offset_left = 373.0
offset_top = 4.0
offset_right = 1093.0
offset_bottom = 484.0
texture_under = ExtResource("2_x0pn0")
texture_progress = ExtResource("3_y6vgk")

[node name="jec_bar" type="TextureProgressBar" parent="."]
offset_left = 176.0
offset_top = 4.0
offset_right = 376.0
offset_bottom = 49.0
fill_mode = 1
texture_under = ExtResource("3_y6vgk")
texture_progress = ExtResource("2_x0pn0")

[node name="special_label" type="Label" parent="."]
offset_left = 584.0
offset_top = 81.0
offset_right = 720.0
offset_bottom = 104.0
text = "x : Launch special"

[node name="SwapLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -11.5
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Swap players !"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="SwapTimer" type="Timer" parent="SwapLabel"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="second_timer" to="." method="_on_second_timer_timeout"]
[connection signal="timeout" from="SwapLabel/SwapTimer" to="." method="_on_swap_timer_timeout"]
